name:                C-small-elm-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mebassett/servant-db-elm-auth-example
license:             BSD3
license-file:        LICENSE
author:              Matthew Eric Bassett
maintainer:          meb@triviumre.com
copyright:           Trivium Real Estate Ltd
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , servant
                     , aeson
                     , time
                     , text
                     , mtl
                     , file-embed
                     , wai-app-static
                     , bytestring
                     , postgresql-simple

  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , TypeOperators
                     , DeriveGeneric
                     , OverloadedStrings
                     , TemplateHaskell

executable exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , C-small-elm-app
                     , wai
                     , warp
                     , servant-server
                     , postgresql-simple
                     , wai-cors
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable code-gen
  hs-source-dirs:      elm-code-generator
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , C-small-elm-app
                     , elm-export
                     , servant-elm
                     , text
                     , wl-pprint-text

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
