name:                D-cookie-logins
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mebassett/servant-db-elm-auth-example
license:             BSD3
license-file:        LICENSE
author:              Matthew Eric Bassett
maintainer:          meb@triviumre.com
copyright:           Trivium Real Estate Ltd
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , servant
                     , aeson
                     , time
                     , text
                     , mtl
                     , file-embed
                     , wai-app-static
                     , bytestring
                     , servant-auth
                     , servant-auth-server
                     , postgresql-simple
                     , cookie

  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , TypeOperators
                     , DeriveGeneric
                     , OverloadedStrings
                     , TemplateHaskell
                     , FlexibleContexts

executable exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , D-cookie-logins
                     , wai
                     , warp
                     , servant-server
                     , servant-auth-server
                     , time
                     , wai-logger
                     , postgresql-simple
                     , wai-cors
                     , cookie
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable code-gen
  hs-source-dirs:      elm-code-generator
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , D-cookie-logins
                     , elm-export
                     , servant-elm
                     , text
                     , servant-server
                     , servant-auth-server
                     , servant-foreign
                     , wl-pprint-text
                     , cookie

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , FlexibleContexts
                     , TypeFamilies
                     , ScopedTypeVariables
                     , TypeOperators
